# folax

./: .gitignore  Dockerfile  LATEST_IMPROVEMENTS.md  README.md  inference.odt  pyproject.toml
.github/workflows/: CI.yml
.ipynb_checkpoints/: README-checkpoint.md
1_OTF_ZSSR_reference_circular/: newton_residuals_sample_180.csv  newton_residuals_zssr_sample_180_N82.csv  square.vtk
1_OTF_ZSSR_reference_circular/ZSSR_N82/: square.vtk
1_OTF_reference_circular/: newton_residuals_sample_180.csv  square.vtk
1_OTF_reference_circular/flax_final_state/: _CHECKPOINT_METADATA  manifest.ocdbt
1_OTF_reference_circular/flax_train_state/: _CHECKPOINT_METADATA  manifest.ocdbt
1_Param_Transfer_reference_circular/: newton_residuals_sample_180.csv  square.vtk
1_Param_Transfer_reference_circular/flax_final_state/: _CHECKPOINT_METADATA  manifest.ocdbt
1_Param_Transfer_reference_circular/flax_train_state/: _CHECKPOINT_METADATA  manifest.ocdbt
1_Param_ZSSR_reference_circular/: newton_residuals_sample_180.csv  newton_residuals_zssr_sample_180_N82.csv  square.vtk
1_Param_ZSSR_reference_circular/ZSSR_N82/: square.vtk
1_Param_to_OTF_Transfer_ZSSR_reference_circular/: newton_residuals_sample_180.csv  newton_residuals_zssr_sample_180_N82.csv  square.vtk
1_Param_to_OTF_Transfer_ZSSR_reference_circular/ZSSR_N82/: square.vtk
1_Parametric_reference_circular/: newton_residuals_sample_180.csv
1_Parametric_reference_circular/flax_final_state/: _CHECKPOINT_METADATA
1_Parametric_reference_circular/flax_train_state/: _CHECKPOINT_METADATA  _METADATA  manifest.ocdbt
examples/: examples_runner.py
fol/controls/: control.py  (+2 more)
fol/loss_functions/ffi_functions/: CMakeLists.txt  install.sh  pyproject.toml
folax_results_december_hpc_FNO/: newton_residuals_sample_180.csv  square.vtk
gui-streamlit/: folax-streamlit.py  mechanical2d_utilities.py  meta_alpha_implicit_pr_lr_mechanical_2D_identity_control.py  run_pretrained_neohookean.py
nn_output_mechanical_2D_neohooke_FE_only/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_FE_only_dual_phase/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_pi_fno/: square.vtk
nn_output_mechanical_2D_neohooke_pi_fno_otf/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_pi_fno_otf_circular/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_pi_fno_otf_dualphase_slide4_circular/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_pi_fno_otf_dualphase_slide_sample180/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_pi_fno_otf_from_param/: newton_residuals_sample_180.csv  square.vtk
nn_output_mechanical_2D_neohooke_pi_fno_param/: newton_residuals_sample_180.csv  square.vtk
(+239 files in other folders)
